--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.config.import=optional:configserver:http://host.docker.internal:8888
+spring.config.import=optional:configserver:http://localhost:8888
 limitservice.min=7
 limitservice.max=8
 management.endpoints.web.exposure.include=*
