--- a/application.properties
+++ b/application.properties
@@ -2,4 +2,4 @@ spring.config.import=optional:configserver:http://localhost:8888
 limitservice.min=7
 limitservice.max=8
 management.endpoints.web.exposure.include=*
-spring.application.name=limitservice
+spring.application.name=limit-service
