--- a/application-dev.properties
+++ b/application-dev.properties
@@ -2,3 +2,4 @@ limitservice.min=7
 limitservice.max=8
 management.endpoints.web.exposure.include=*
 spring.application.name=limit-service
+limit.new_config=9
